[workspace]
resolver = "2"
members = [
    # Phase 0: Contract-First (Constitutional Layer)
    "crates/rcf-types",
    "crates/rcf-meaning",
    "crates/rcf-intent",
    "crates/rcf-commitment",
    "crates/rcf-validator",
    "crates/rcf-compiler",
    "crates/rcf-audit",
    "crates/ual-types",
    "crates/ual-parser",
    "crates/ual-compiler",
    "crates/mrp-types",
    "crates/mrp-router",
    "crates/mrp-transport",
    "crates/mrp-service",

    # Phase 1: Authority and Execution Boundary
    "crates/aas-types",
    "crates/aas-identity",
    "crates/aas-capability",
    "crates/aas-policy",
    "crates/aas-adjudication",
    "crates/aas-ledger",
    "crates/aas-service",
    "crates/mapleverse/types",
    "crates/mapleverse/executor",
    "crates/mapleverse/connectors",
    "crates/mapleverse/evidence",
    "crates/mapleverse/service",

    # Phase 2: Learning Without Power
    "crates/eve-types",
    "crates/eve-ingestion",
    "crates/eve-evaluation",
    "crates/eve-artifacts",
    "crates/eve-service",

    # Phase 3: Cognition Layer
    "crates/resonator/types",

    # Collective Layer (MAPLE v2)
    "crates/collective-types",
    "crates/collective-runtime",

    # Workflow Engine (MAPLE v2)
    "crates/workflow-types",
    "crates/workflow-engine",
    "crates/workflow-dsl",

    # Mapleverse World (MAPLE v2 - AI-only civilization)
    "crates/mapleverse/world",
    "crates/resonator/identity",
    "crates/resonator/meaning",
    "crates/resonator/intent",
    "crates/resonator/commitment",
    "crates/resonator/consequence",
    "crates/resonator/memory",
    "crates/resonator/conversation",
    "crates/resonator/profiles",
    "crates/resonator/runtime",
    "crates/resonator/client",
    "crates/resonator/cli",
    "crates/resonator/observability",
    "crates/resonator/conformance",

    # MAPLE Core Runtime
    "crates/maple-runtime",
    "crates/maple/storage",
    "crates/maple/model-openai",
    "crates/maple/model-anthropic",
    "crates/maple/model-gemini",
    "crates/maple/model-grok",
    "crates/maple/protocol-mcp",
    "crates/maple/protocol-a2a",

    # PALM - Fleet Orchestration Layer
    "crates/palm/types",
    "crates/palm/registry",
    "crates/palm/deployment",
    "crates/palm/health",
    "crates/palm/state",
    "crates/palm/control",
    "crates/palm/policy",
    "crates/palm/shared-state",
    "crates/palm/cli",
    "crates/palm/daemon",
    "crates/palm/observability",

    # Platform Contracts
    "contracts/platform-pack",
    "contracts/conformance",

    # Integration and Testing
    "crates/maple-integration",
    "crates/maple-cli",

    # Examples
    "examples/boundary-demo",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Maple AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mapleaiorg/maple"
description = "Maple AI Framework - Resonance-Native Architecture"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Cryptography
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
getrandom = "0.2"

# Unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid", "json"] }

# Networking
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# Internal crates
rcf-types = { version = "0.1.2", path = "crates/rcf-types" }
rcf-meaning = { version = "0.1.2", path = "crates/rcf-meaning" }
rcf-intent = { version = "0.1.2", path = "crates/rcf-intent" }
rcf-commitment = { version = "0.1.2", path = "crates/rcf-commitment" }
rcf-validator = { version = "0.1.2", path = "crates/rcf-validator" }
rcf-compiler = { version = "0.1.2", path = "crates/rcf-compiler" }
rcf-audit = { version = "0.1.2", path = "crates/rcf-audit" }
ual-types = { version = "0.1.2", path = "crates/ual-types" }
ual-parser = { version = "0.1.2", path = "crates/ual-parser" }
ual-compiler = { version = "0.1.2", path = "crates/ual-compiler" }
mrp-types = { version = "0.1.2", path = "crates/mrp-types" }
mrp-router = { version = "0.1.2", path = "crates/mrp-router" }
mrp-transport = { version = "0.1.2", path = "crates/mrp-transport" }
mrp-service = { version = "0.1.2", path = "crates/mrp-service" }
aas-types = { version = "0.1.2", path = "crates/aas-types" }
aas-identity = { version = "0.1.2", path = "crates/aas-identity" }
aas-capability = { version = "0.1.2", path = "crates/aas-capability" }
aas-policy = { version = "0.1.2", path = "crates/aas-policy" }
aas-adjudication = { version = "0.1.2", path = "crates/aas-adjudication" }
aas-ledger = { version = "0.1.2", path = "crates/aas-ledger" }
aas-service = { version = "0.1.2", path = "crates/aas-service" }
mapleverse-types = { version = "0.1.2", path = "crates/mapleverse/types" }
mapleverse-executor = { version = "0.1.2", path = "crates/mapleverse/executor" }
mapleverse-connectors = { version = "0.1.2", path = "crates/mapleverse/connectors" }
mapleverse-evidence = { version = "0.1.2", path = "crates/mapleverse/evidence" }
mapleverse-service = { version = "0.1.2", path = "crates/mapleverse/service" }
eve-types = { version = "0.1.2", path = "crates/eve-types" }
eve-ingestion = { version = "0.1.2", path = "crates/eve-ingestion" }
eve-evaluation = { version = "0.1.2", path = "crates/eve-evaluation" }
eve-artifacts = { version = "0.1.2", path = "crates/eve-artifacts" }
eve-service = { version = "0.1.2", path = "crates/eve-service" }
resonator-types = { version = "0.1.2", path = "crates/resonator/types" }
resonator-identity = { version = "0.1.2", path = "crates/resonator/identity" }
resonator-meaning = { version = "0.1.2", path = "crates/resonator/meaning" }
resonator-intent = { version = "0.1.2", path = "crates/resonator/intent" }
resonator-commitment = { version = "0.1.2", path = "crates/resonator/commitment" }
resonator-consequence = { version = "0.1.2", path = "crates/resonator/consequence" }
resonator-memory = { version = "0.1.2", path = "crates/resonator/memory" }
resonator-conversation = { version = "0.1.2", path = "crates/resonator/conversation" }
resonator-profiles = { version = "0.1.2", path = "crates/resonator/profiles" }
resonator-runtime = { version = "0.1.2", path = "crates/resonator/runtime" }
resonator-client = { version = "0.1.2", path = "crates/resonator/client" }
resonator-cli = { version = "0.1.2", path = "crates/resonator/cli" }
resonator-observability = { version = "0.1.2", path = "crates/resonator/observability" }
resonator-conformance = { version = "0.1.2", path = "crates/resonator/conformance" }
maple-runtime = { version = "0.1.2", path = "crates/maple-runtime" }
maple-storage = { version = "0.1.2", path = "crates/maple/storage" }
maple-model-openai = { version = "0.1.0", path = "crates/maple/model-openai" }
maple-model-anthropic = { version = "0.1.0", path = "crates/maple/model-anthropic" }
maple-model-gemini = { version = "0.1.0", path = "crates/maple/model-gemini" }
maple-model-grok = { version = "0.1.0", path = "crates/maple/model-grok" }
maple-integration = { version = "0.1.2", path = "crates/maple-integration" }
collective-types = { version = "0.1.2", path = "crates/collective-types" }
collective-runtime = { version = "0.1.2", path = "crates/collective-runtime" }
workflow-types = { version = "0.1.2", path = "crates/workflow-types" }
workflow-engine = { version = "0.1.2", path = "crates/workflow-engine" }
workflow-dsl = { version = "0.1.2", path = "crates/workflow-dsl" }

# PALM crates
palm-types = { version = "0.1.0", path = "crates/palm/types" }
palm-registry = { version = "0.1.0", path = "crates/palm/registry" }
palm-deployment = { version = "0.1.0", path = "crates/palm/deployment" }
palm-health = { version = "0.1.0", path = "crates/palm/health" }
palm-state = { version = "0.1.0", path = "crates/palm/state" }
palm-control = { version = "0.1.0", path = "crates/palm/control" }
palm-policy = { version = "0.1.0", path = "crates/palm/policy" }
palm-shared-state = { version = "0.1.0", path = "crates/palm/shared-state" }
palm = { version = "0.1.0", path = "crates/palm/cli" }
palm-daemon = { version = "0.1.0", path = "crates/palm/daemon" }
palm-observability = { version = "0.1.0", path = "crates/palm/observability" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
