[workspace]
resolver = "2"
members = [
    # MAPLE Foundation Crypto (local Ed25519 + BLAKE3)
    "crates/maple/crypto",

    # Phase F: Packaging & Build System
    "crates/maple-package",
    "crates/maple-package-format",
    "crates/maple-build",
    "crates/maple-init",
    "crates/maple-package-trust",

    # Phase G: Registry & Distribution
    "crates/maple-registry-client",
    "crates/maple-registry-catalog",
    "crates/maple-store",

    # Phase H: Model Manager
    "crates/maple-model-core",
    "crates/maple-model-backends",
    "crates/maple-model-router",

    # Phase I: Guard & Risk Engine
    "crates/maple-guard-core",
    "crates/maple-guard-firewall",
    "crates/maple-guard-pii",
    "crates/maple-guard-inference",
    "crates/maple-guard-approvals",
    "crates/maple-guard-compliance",
    "crates/maple-guard-risk",
    "crates/maple-guard",

    # Phase H (continued): Model Manager
    "crates/maple-model-server",
    "crates/maple-model-benchmark",

    # Phase J: Foundry
    "crates/maple-foundry-traces",
    "crates/maple-foundry-eval",
    "crates/maple-foundry-train",

    # Phase K: Fleet
    "crates/maple-fleet-instance",
    "crates/maple-fleet-stack",
    "crates/maple-fleet-rollout",
    "crates/maple-fleet-costs",
    "crates/maple-fleet-tenancy",
    "crates/maple-fleet-observe",

    # Phase L: Reference Agents
    "crates/maple-agents-payment",
    "crates/maple-agents-trading",
    "crates/maple-agents-support",
    "crates/maple-agents-compliance",

    # Phase 0: Contract-First (Constitutional Layer)
    "crates/rcf/types",
    "crates/rcf/meaning",
    "crates/rcf/intent",
    "crates/rcf/commitment",
    "crates/rcf/validator",
    "crates/rcf/compiler",
    "crates/rcf/audit",
    "crates/ual/types",
    "crates/ual/parser",
    "crates/ual/compiler",
    "crates/mrp/types",
    "crates/mrp/router",
    "crates/mrp/transport",
    "crates/mrp/service",

    # Phase 1: Authority and Execution Boundary
    "crates/aas/types",
    "crates/aas/identity",
    "crates/aas/capability",
    "crates/aas/policy",
    "crates/aas/adjudication",
    "crates/aas/ledger",
    "crates/aas/service",
    "crates/mapleverse/types",
    "crates/mapleverse/executor",
    "crates/mapleverse/connectors",
    "crates/mapleverse/evidence",
    "crates/mapleverse/service",

    # Phase 2: Learning Without Power
    "crates/eve/types",
    "crates/eve/ingestion",
    "crates/eve/evaluation",
    "crates/eve/artifacts",
    "crates/eve/service",

    # Phase 3: Cognition Layer
    "crates/resonator/types",

    # Collective Layer (MAPLE v2)
    "crates/collective/types",
    "crates/collective/runtime",

    # Workflow Engine (MAPLE v2)
    "crates/workflow/types",
    "crates/workflow/engine",
    "crates/workflow/dsl",

    # Mapleverse World (MAPLE v2 - AI-only civilization)
    "crates/mapleverse/world",
    "crates/resonator/identity",
    "crates/resonator/meaning",
    "crates/resonator/intent",
    "crates/resonator/commitment",
    "crates/resonator/consequence",
    "crates/resonator/memory",
    "crates/resonator/conversation",
    "crates/resonator/profiles",
    "crates/resonator/runtime",
    "crates/resonator/client",
    "crates/resonator/cli",
    "crates/resonator/observability",
    "crates/resonator/conformance",

    # MAPLE Skill Pack (D-01/D-04)
    "crates/maple/skill-pack",

    # MAPLE Core Runtime
    "crates/maple-runtime",
    "crates/maple/storage",
    "crates/maple/model-openai",
    "crates/maple/model-anthropic",
    "crates/maple/model-gemini",
    "crates/maple/model-grok",
    "crates/maple/protocol-mcp",
    "crates/maple/protocol-a2a",
    # WorldLine canonical entrypoints
    "crates/worldline/types",
    "crates/worldline/identity",
    "crates/worldline/core",
    "crates/worldline/runtime",
    "crates/worldline/ledger",
    "crates/worldline/governance",
    "crates/worldline/operator-bot",
    "crates/worldline/promptkit",
    "crates/worldline/substrate",
    "crates/worldline/conformance",
    "crates/worldline/integration",

    # PALM - Fleet Orchestration Layer
    "crates/palm/types",
    "crates/palm/registry",
    "crates/palm/deployment",
    "crates/palm/health",
    "crates/palm/state",
    "crates/palm/control",
    "crates/palm/policy",
    "crates/palm/shared-state",
    "crates/palm/cli",
    "crates/palm/daemon",
    "crates/palm/observability",

    # Platform Contracts
    "contracts/platform-pack",
    "contracts/conformance",

    # Integration and Testing
    "crates/maple-integration",
    "crates/maple-cli",

    # MWL Compatibility Wrappers
    "crates/mwl/types",
    "crates/mwl/identity",

    # WorldLine Kernel
    "crates/kernel/fabric",
    "crates/kernel/memory",
    "crates/kernel/gate",
    "crates/kernel/mrp",
    "crates/kernel/provenance",
    "crates/kernel/governance",
    "crates/kernel/safety",
    "crates/kernel/profiles",
    "crates/kernel/financial",
    "crates/kernel/sdk",

    # WorldLine Self-Producing Substrate
    "crates/substrate/observation",
    "crates/substrate/meaning",
    "crates/substrate/intent",
    "crates/substrate/commitment",
    "crates/substrate/consequence",
    "crates/substrate/self-mod-gate",
    "crates/substrate/codegen",
    "crates/substrate/deployment",
    "crates/substrate/ir",
    "crates/substrate/langgen",
    "crates/substrate/compiler",
    "crates/substrate/sal",
    "crates/substrate/hardware",
    "crates/substrate/bootstrap",
    "crates/substrate/evos",
    "crates/substrate/conformance",

    # WorldLine suite wrappers
    "crates/substrate/integration-suite",
    "crates/substrate/conformance-suite",
    # Legacy compatibility wrappers
    "crates/mwl/integration",
    "crates/mwl/conformance",

    # WAF — WorldLine Autopoietic Factory
    "crates/waf/context-graph",
    "crates/waf/evidence",
    "crates/waf/resonance-monitor",
    "crates/waf/evolution-engine",
    "crates/waf/compiler",
    "crates/waf/wlir",
    "crates/waf/swap-gate",
    "crates/waf/governance",
    "crates/waf/genesis",
    "crates/waf/kernel",
    "crates/waf/tests",
    "crates/waf/demo",

    # Examples
    "examples/boundary-demo",
    "examples/mwl-worldline-lifecycle",
    "examples/mwl-commitment-gate",
    "examples/mwl-financial-settlement",
    "examples/mwl-human-agency",
    "examples/mwl-provenance-audit",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Maple AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mapleaiorg/maple"
description = "Maple AI Framework - Resonance-Native Architecture"
rust-version = "1.80"

[workspace.dependencies]
# MAPLE Foundation
maple-crypto = { version = "0.1.0", path = "crates/maple/crypto" }
maple-skill-pack = { version = "0.1.3", path = "crates/maple/skill-pack" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Cryptography
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
getrandom = "0.2"

# Unique identifiers
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid", "json"] }

# Networking
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json"] }

# Testing
proptest = "1.4"
criterion = "0.5"

# Internal crates
rcf-types = { version = "0.1.3", path = "crates/rcf/types" }
rcf-meaning = { version = "0.1.3", path = "crates/rcf/meaning" }
rcf-intent = { version = "0.1.3", path = "crates/rcf/intent" }
rcf-commitment = { version = "0.1.3", path = "crates/rcf/commitment" }
rcf-validator = { version = "0.1.3", path = "crates/rcf/validator" }
rcf-compiler = { version = "0.1.3", path = "crates/rcf/compiler" }
rcf-audit = { version = "0.1.3", path = "crates/rcf/audit" }
ual-types = { version = "0.1.3", path = "crates/ual/types" }
ual-parser = { version = "0.1.3", path = "crates/ual/parser" }
ual-compiler = { version = "0.1.3", path = "crates/ual/compiler" }
mrp-types = { version = "0.1.3", path = "crates/mrp/types" }
mrp-router = { version = "0.1.3", path = "crates/mrp/router" }
mrp-transport = { version = "0.1.3", path = "crates/mrp/transport" }
mrp-service = { version = "0.1.3", path = "crates/mrp/service" }
aas-types = { version = "0.1.3", path = "crates/aas/types" }
aas-identity = { version = "0.1.3", path = "crates/aas/identity" }
aas-capability = { version = "0.1.3", path = "crates/aas/capability" }
aas-policy = { version = "0.1.3", path = "crates/aas/policy" }
aas-adjudication = { version = "0.1.3", path = "crates/aas/adjudication" }
aas-ledger = { version = "0.1.3", path = "crates/aas/ledger" }
aas-service = { version = "0.1.3", path = "crates/aas/service" }
mapleverse-types = { version = "0.1.3", path = "crates/mapleverse/types" }
mapleverse-executor = { version = "0.1.3", path = "crates/mapleverse/executor" }
mapleverse-connectors = { version = "0.1.3", path = "crates/mapleverse/connectors" }
mapleverse-evidence = { version = "0.1.3", path = "crates/mapleverse/evidence" }
mapleverse-service = { version = "0.1.3", path = "crates/mapleverse/service" }
eve-types = { version = "0.1.3", path = "crates/eve/types" }
eve-ingestion = { version = "0.1.3", path = "crates/eve/ingestion" }
eve-evaluation = { version = "0.1.3", path = "crates/eve/evaluation" }
eve-artifacts = { version = "0.1.3", path = "crates/eve/artifacts" }
eve-service = { version = "0.1.3", path = "crates/eve/service" }
resonator-types = { version = "0.1.3", path = "crates/resonator/types" }
resonator-identity = { version = "0.1.3", path = "crates/resonator/identity" }
resonator-meaning = { version = "0.1.3", path = "crates/resonator/meaning" }
resonator-intent = { version = "0.1.3", path = "crates/resonator/intent" }
resonator-commitment = { version = "0.1.3", path = "crates/resonator/commitment" }
resonator-consequence = { version = "0.1.3", path = "crates/resonator/consequence" }
resonator-memory = { version = "0.1.3", path = "crates/resonator/memory" }
resonator-conversation = { version = "0.1.3", path = "crates/resonator/conversation" }
resonator-profiles = { version = "0.1.3", path = "crates/resonator/profiles" }
resonator-runtime = { version = "0.1.3", path = "crates/resonator/runtime" }
resonator-client = { version = "0.1.3", path = "crates/resonator/client" }
resonator-cli = { version = "0.1.3", path = "crates/resonator/cli" }
resonator-observability = { version = "0.1.3", path = "crates/resonator/observability" }
resonator-conformance = { version = "0.1.3", path = "crates/resonator/conformance" }
maple-runtime = { version = "0.1.3", path = "crates/maple-runtime" }
worldline-types = { version = "0.1.3", path = "crates/worldline/types" }
worldline-identity = { version = "0.1.3", path = "crates/worldline/identity" }
worldline-core = { version = "0.1.3", path = "crates/worldline/core" }
worldline-runtime = { version = "0.1.3", path = "crates/worldline/runtime" }
worldline-ledger = { version = "0.1.3", path = "crates/worldline/ledger" }
worldline-governance = { version = "0.1.3", path = "crates/worldline/governance" }
worldline-operator-bot = { version = "0.1.3", path = "crates/worldline/operator-bot" }
worldline-promptkit = { version = "0.1.3", path = "crates/worldline/promptkit" }
worldline-substrate = { version = "0.1.3", path = "crates/worldline/substrate" }
worldline-conformance = { version = "0.1.3", path = "crates/worldline/conformance" }
worldline-integration = { version = "0.1.3", path = "crates/worldline/integration" }
maple-storage = { version = "0.1.3", path = "crates/maple/storage" }
maple-model-openai = { version = "0.1.0", path = "crates/maple/model-openai" }
maple-model-anthropic = { version = "0.1.0", path = "crates/maple/model-anthropic" }
maple-model-gemini = { version = "0.1.0", path = "crates/maple/model-gemini" }
maple-model-grok = { version = "0.1.0", path = "crates/maple/model-grok" }
maple-integration = { version = "0.1.3", path = "crates/maple-integration" }
maple-package = { path = "crates/maple-package" }
maple-package-format = { path = "crates/maple-package-format" }
maple-build = { path = "crates/maple-build" }
maple-init = { path = "crates/maple-init" }
maple-package-trust = { path = "crates/maple-package-trust" }
maple-registry-client = { path = "crates/maple-registry-client" }
maple-store = { path = "crates/maple-store" }
maple-model-core = { path = "crates/maple-model-core" }
maple-model-backends = { path = "crates/maple-model-backends" }
maple-model-router = { path = "crates/maple-model-router" }
maple-registry-catalog = { path = "crates/maple-registry-catalog" }
maple-guard-core = { path = "crates/maple-guard-core" }
maple-guard-firewall = { path = "crates/maple-guard-firewall" }
maple-guard-pii = { path = "crates/maple-guard-pii" }
maple-guard-inference = { path = "crates/maple-guard-inference" }
maple-foundry-traces = { path = "crates/maple-foundry-traces" }
maple-guard-approvals = { path = "crates/maple-guard-approvals" }
maple-guard-compliance = { path = "crates/maple-guard-compliance" }
maple-guard-risk = { path = "crates/maple-guard-risk" }
maple-guard = { path = "crates/maple-guard" }
maple-model-server = { path = "crates/maple-model-server" }
maple-model-benchmark = { path = "crates/maple-model-benchmark" }
maple-foundry-eval = { path = "crates/maple-foundry-eval" }
maple-foundry-train = { path = "crates/maple-foundry-train" }
maple-fleet-instance = { path = "crates/maple-fleet-instance" }
maple-fleet-stack = { path = "crates/maple-fleet-stack" }
maple-fleet-rollout = { path = "crates/maple-fleet-rollout" }
maple-fleet-costs = { path = "crates/maple-fleet-costs" }
maple-fleet-tenancy = { path = "crates/maple-fleet-tenancy" }
maple-fleet-observe = { path = "crates/maple-fleet-observe" }
maple-agents-payment = { path = "crates/maple-agents-payment" }
maple-agents-trading = { path = "crates/maple-agents-trading" }
maple-agents-support = { path = "crates/maple-agents-support" }
maple-agents-compliance = { path = "crates/maple-agents-compliance" }
collective-types = { version = "0.1.3", path = "crates/collective/types" }
collective-runtime = { version = "0.1.3", path = "crates/collective/runtime" }
workflow-types = { version = "0.1.3", path = "crates/workflow/types" }
workflow-engine = { version = "0.1.3", path = "crates/workflow/engine" }
workflow-dsl = { version = "0.1.3", path = "crates/workflow/dsl" }

# PALM crates
palm-types = { version = "0.1.0", path = "crates/palm/types" }
palm-registry = { version = "0.1.0", path = "crates/palm/registry" }
palm-deployment = { version = "0.1.0", path = "crates/palm/deployment" }
palm-health = { version = "0.1.0", path = "crates/palm/health" }
palm-state = { version = "0.1.0", path = "crates/palm/state" }
palm-control = { version = "0.1.0", path = "crates/palm/control" }
palm-policy = { version = "0.1.0", path = "crates/palm/policy" }
palm-shared-state = { version = "0.1.0", path = "crates/palm/shared-state" }
palm = { version = "0.1.0", path = "crates/palm/cli" }
palm-daemon = { version = "0.1.0", path = "crates/palm/daemon" }
palm-observability = { version = "0.1.0", path = "crates/palm/observability" }

# MWL crates
maple-mwl-types = { path = "crates/mwl/types" }
maple-mwl-identity = { path = "crates/mwl/identity" }
maple-kernel-fabric = { path = "crates/kernel/fabric" }
maple-kernel-memory = { path = "crates/kernel/memory" }
maple-kernel-gate = { path = "crates/kernel/gate" }
maple-kernel-mrp = { path = "crates/kernel/mrp" }
maple-kernel-provenance = { path = "crates/kernel/provenance" }
maple-kernel-governance = { path = "crates/kernel/governance" }
maple-kernel-safety = { path = "crates/kernel/safety" }
maple-kernel-profiles = { path = "crates/kernel/profiles" }
maple-kernel-financial = { path = "crates/kernel/financial" }
maple-kernel-sdk = { path = "crates/kernel/sdk" }
maple-worldline-observation = { path = "crates/substrate/observation" }
maple-worldline-meaning = { path = "crates/substrate/meaning" }
maple-worldline-intent = { path = "crates/substrate/intent" }
maple-worldline-commitment = { path = "crates/substrate/commitment" }
maple-worldline-consequence = { path = "crates/substrate/consequence" }
maple-worldline-self-mod-gate = { path = "crates/substrate/self-mod-gate" }
maple-worldline-codegen = { path = "crates/substrate/codegen" }
maple-worldline-deployment = { path = "crates/substrate/deployment" }
maple-worldline-ir = { path = "crates/substrate/ir" }
maple-worldline-langgen = { path = "crates/substrate/langgen" }
maple-worldline-compiler = { path = "crates/substrate/compiler" }
maple-worldline-sal = { path = "crates/substrate/sal" }
maple-worldline-hardware = { path = "crates/substrate/hardware" }
maple-worldline-bootstrap = { path = "crates/substrate/bootstrap" }
maple-worldline-evos = { path = "crates/substrate/evos" }
maple-worldline-conformance = { path = "crates/substrate/conformance" }
maple-worldline-integration-suite = { path = "crates/substrate/integration-suite" }
maple-worldline-conformance-suite = { path = "crates/substrate/conformance-suite" }
maple-mwl-integration = { path = "crates/mwl/integration" }
maple-mwl-conformance = { path = "crates/mwl/conformance" }

# WLL — WorldLine Ledger (canonical implementation)
wll-types = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-crypto = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-store = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-dag = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-ledger = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-fabric = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-gate = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-refs = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-pack = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-sync = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-protocol = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-server = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }
wll-sdk = { version = "0.1.0", git = "https://github.com/mapleaiorg/wll.git" }

# WAF crates
maple-waf-context-graph = { path = "crates/waf/context-graph" }
maple-waf-evidence = { path = "crates/waf/evidence" }
maple-waf-resonance-monitor = { path = "crates/waf/resonance-monitor" }
maple-waf-evolution-engine = { path = "crates/waf/evolution-engine" }
maple-waf-compiler = { path = "crates/waf/compiler" }
maple-waf-wlir = { path = "crates/waf/wlir" }
maple-waf-swap-gate = { path = "crates/waf/swap-gate" }
maple-waf-governance = { path = "crates/waf/governance" }
maple-waf-genesis = { path = "crates/waf/genesis" }
maple-waf-kernel = { path = "crates/waf/kernel" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
