[workspace]
resolver = "2"
members = [
    "crates/ibank-core",
    "crates/ibank-adapters",
    "crates/ibank-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maple AI Team"]
license = "MIT OR Apache-2.0"
description = "iBank implementation on MAPLE Resonance Runtime"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

ibank-core = { path = "crates/ibank-core" }
ibank-adapters = { path = "crates/ibank-adapters" }
