[package]
name = "palm-conformance"
version = "0.1.0"
edition = "2021"
description = "PALM Platform Pack Conformance Test Suite"
authors = ["MapleAI Intelligence Inc."]
license = "MIT OR Apache-2.0"

[dependencies]
palm-platform-pack = { path = "../platform-pack" }
palm-types = { path = "../../crates/palm-types" }

async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
semver = "1.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
