[package]
name = "palm-platform-pack"
version = "0.1.0"
edition = "2021"
description = "PALM Platform Pack Contract - Interface for platform-specific implementations"
license = "MIT OR Apache-2.0"

[dependencies]
palm-types = { path = "../../crates/palm-types" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
semver = "1.0"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
