[package]
name = "aas-adjudication"
version.workspace = true
edition.workspace = true
description = "AAS Adjudication - Commitment evaluation and decision making"

[dependencies]
aas-types = { workspace = true }
rcf-types = { workspace = true }
rcf-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
