[package]
name = "aas-capability"
version.workspace = true
edition.workspace = true
description = "AAS Capability - Capability management"

[dependencies]
aas-types = { workspace = true }
rcl-types = { workspace = true }
rcl-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
