[package]
name = "aas-identity"
version.workspace = true
edition.workspace = true
description = "AAS Identity - Agent identity management"

[dependencies]
aas-types = { workspace = true }
rcf-types = { workspace = true }
rcf-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
