[package]
name = "aas-ledger"
version.workspace = true
edition.workspace = true
description = "AAS Ledger - Immutable commitment accountability record"

[dependencies]
aas-types = { workspace = true }
rcl-types = { workspace = true }
rcl-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
