[package]
name = "aas-ledger"
version.workspace = true
edition.workspace = true
description = "AAS Ledger - Immutable commitment accountability record"

[dependencies]
aas-types = { workspace = true }
rcf-types = { workspace = true }
rcf-commitment = { workspace = true }
maple-storage = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
