[package]
name = "aas-policy"
version.workspace = true
edition.workspace = true
description = "AAS Policy - Policy engine for commitment adjudication"

[dependencies]
aas-types = { workspace = true }
rcl-types = { workspace = true }
rcl-commitment = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
